# rapi

.github/: copilot-instructions.md
ops/: Dockerfile  docker-compose.yml  nginx.conf  start.sh
project/: .gitignore  Cargo.toml  Clippy.toml  rustfmt.toml
project/db/: README.md  mod.rs
project/src/: Cargo.toml  main.rs
project/src/api/: mod.rs
project/src/db/: mod.rs
project/src/errors/: mod.rs
project/src/handlers/: mod.rs
project/src/middlewares/: mod.rs  tracing_logger.rs
project/src/models/: mod.rs
project/tests/: error_validation_tests.rs
specs/001-create-api-scaffold/: data-model.md  performance-test.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-api-scaffold/contracts/: example_contract_test.rs  openapi.yaml
