

[package]
name = "dmnapi"
version = "0.1.0"
edition = "2021"

[lib]
name = "dmnapi"
path = "src/lib.rs"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.12"
utoipa = "4"
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
validator = "0.16"
validator_derive = "0.16"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
